--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,219 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-color: #000028;
+}
+
+.decorated-zone {
+  position: relative;
+  padding: var(--gap);
+}
+
+.header {
+  background-image: var(--bg-img);
+  background-position: center;
+  background-attachment: fixed;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  height: 100vh;
+  min-height: 668px;
+}
+
+.header__rec-indicator {
+  position: absolute;
+  right: 20px;
+  grid-row: 1;
+  align-self: start;
+  margin-bottom: 39px;
+  color: var(--accent-color);
+  font-family: var(--main-font), sans-serif;
+  font-weight: var(--main-font-weight);
+  font-size: var(--main-font-size);
+  line-height: 25px;
+}
+
+.header__rec-indicator::after {
+  content: "";
+  display: inline-block;
+  margin-left: var(--gap);
+  border-radius: 50%;
+  box-shadow: 0 0 4px 2px var(--accent-color);
+  background: var(--accent-color);
+  inline-size: 9px;
+  block-size: 9px;
+}
+
+.header__theme-menu-list { 
+  display: flex;
+  flex-direction: column;
+  grid-row: 1;
+  justify-self: end;
+  gap: var(--gap);
+  align-self: start;
+  margin-top: 75px;
+  padding: 0;
+  list-style: none;
+}
+
+.header__theme-menu-button {
+  justify-content: center;
+  align-content: center;
+  width: 70px;
+  height: 26px;
+  border: none;
+  padding: 1.5px 13px 1.5px 13px;
+  color: var(--accent-color);
+  font-family: var(--main-font), sans-serif;
+  font-weight: var(--main-font-weight);
+  font-size: var(--main-font-size);
+  line-height: 18px;
+  text-transform: lowercase;
+  background: none;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid rgb(255, 0, 112, 0.4)
+}
+
+.header__theme-menu-button:focus-visible {
+  text-decoration: underline;
+  text-underline-offset: 1px;
+  outline: none;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--accent-color);
+}
+
+.decorated-zone::before, .decorated-zone::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 25px;
+  height: 25px;
+  border: 1px solid var(--accent-color);
+}
+
+.decorated-zone::before { /*TO-DO: проверить топ и райт*/
+  top: var(--gap);
+  right: var(--gap);
+  border-bottom: none;
+  border-left: none;
+}
+
+.decorated-zone::after {
+  bottom: var(--gap);
+  left: var(--gap);
+  border-top: none;
+  border-right: none;
+}
+
+.header__title {
+  color: var(--focus-color);
+  font-family: var(--main-font);
+  font-weight: var(--bold-font-weight);
+  font-size: var(--focus-font-size);
+  line-height: 0.825;
+  text-shadow: 4px 4px var(--accent-color);
+}
+
+.header__paragraph {
+  align-content: center;
+  font-weight: var(--bold-font-weight);
+  font-size: var(--main-font-size);
+  line-height: var(--main-line-height);
+}
+
+.title-decor {
+  display: inline-block;
+  background-color: var(--accent-color);
+  font-family: var(--main-font), sans-serif;
+  color: var(--header-paragraph-color);
+}
+
+.main {
+  margin-top: 40px;
+  padding-right: var(--gap);
+  padding-left: var(--gap);
+  line-height: var(--main-line-height);
+  font-family: var(--main-font), sans-serif;
+}
+
+.main__article {
+  margin-bottom: var(--margin-article);
+}
+
+.main__article-title {
+  font-size: var(--main-font-size);
+  font-weight: var(--bold-font-weight);
+  color: var(--accent-color);
+  margin-bottom: var(--margin-article-title);
+}
+
+.main__paragraph-title {
+  display: block;
+  font-size: var(--main-font-size);
+  margin-bottom: var(--gap);
+}
+
+.main__paragraph-title-big-margin {
+  margin-bottom: var(--margin-article-title);
+}
+
+.main__paragraph-subtitle {
+  margin-bottom: var(--gap);
+  display: block;
+  font-weight: var(--main-font-weight);
+  font-size: var(--main-font-size);
+}
+
+.main__paragraph {
+  color: var(--paragraph-color);
+  font-size: var(--main-font-size);
+  font-weight: var(--main-font-weight);
+  margin-bottom: var(--margin-paragraph);
+}
+
+.main__paragraph:last-child {
+  margin-bottom: 0;
+}
+
+.main__paragraph-link { /*TO-DO: попавить тень*/
+  text-decoration: none;
+  text-shadow: var(--paragraph-link-shadow);
+}
+
+.main__paragraph-link:hover {
+  text-decoration: underline;
+}
+
+.main__paragraph-link:focus-visible {
+  outline: 1px solid #F1B2CE;
+}
+
+.main__galery {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap);
+}
+
+.main_img {
+  display: block;
+  width: 100%;
+}
+
+.footer {
+  min-height: 667px;
+  display: flex;
+  height: 100vh;
+  margin-top: 40px;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.footer__title {
+  font-family: var(--main-font);
+  font-size: var(--focus-font-size);
+  color: var(--focus-color);
+  text-shadow: 2px 2px var(--accent-color);
 }
