--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,14 +3,16 @@
   и их переопределение под различные устройства
 */
 :root {
-  --bg-img: url(../images/cover-image-dark.png);
+  --page-bg-image: url(../images/cover-image-dark.png);
   --main-font: "IBM Plex mono";
   --main-font-size: 18px;
   --main-font-weight: normal;
   --bold-font-weight: bold;
   --main-line-height: 23.4px;
   --gap: 10px;
-  --rec-botgap: 23px;
+  --general-padding: 10px;
+  --header-min-height: 375px;
+  --rec-indicator-right-position: 20px;
   --accent-color: #ff0070;
   --focus-color: #db00ff;
   --focus-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
@@ -20,4 +22,6 @@
   --margin-article-title: 20px;
   --margin-paragraph: 20px;
   --margin-article: 50px;
+  --margin-top-themes-list: 65px;
+  --page-bg-color: #000028;
 }
