--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,6 @@
   background-color: var(--page-bg-color);
   background-image: var(--page-bg-image);
   background-position: center;
-  background-color: none;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -17,7 +16,7 @@
   height: 100vh;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
-  min-height: var(--header-min-height);
+  min-height: var(--header-footer-min-height);
   padding: var(--general-padding);
 }
 
@@ -35,7 +34,7 @@
 .header__rec-indicator::after {
   content: "";
   display: inline-block;
-  margin-left: var(--general-padding);
+  margin-left: 10px;
   border-radius: 50%;
   box-shadow: 0 0 4px 2px var(--accent-color);
   background: var(--accent-color);
@@ -138,7 +137,7 @@
   padding-right: var(--general-padding);
   padding-left: var(--general-padding);
   padding-top: 0;
-  margin-top: 40px;
+  margin-top: var(--margintop-main);
   font-family: var(--main-font), sans-serif;
   line-height: var(--main-line-height);
 }
@@ -215,8 +214,8 @@
   justify-content: center;
   align-content: center;
   height: 100vh;
-  min-height: 668px;
-  margin-top: 40px;
+  min-height: var(--header-footer-min-height);
+  margin-top: var(--marin-footer);
 }
 
 .footer__title {
@@ -228,32 +227,94 @@
 
 @media (width >= 768px) {
   :root {
+    --corner-position: 20px;
     --general-padding: 20px;
-    --header-min-height: 768px;
+    --header-footer-min-height: 1024px;
     --rec-indicator-right-position: 29px;
     --margin-top-themes-list: 172px;
+    --rec-indicator-position: 30px;
+    --margintop-main: 60px;
+    --margin-section: 80px;
+    --marin-footer: 60px;
   }
 
   .header__title {
-    position: absolute;
+    margin-left: -20px;
     justify-self: left;
   }
 
   .header__paragraph {
+    margin-bottom: 163px;
     justify-self: right;
+    align-self: end;
     width: 364px;
     height: 117px;
   }
 
-  .main__article-in-columns {
+  .section-why, .section-how {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-auto-rows: auto;   
-    gap: var(--general-padding);
+    gap: 20px;
   }
 
-  .main__paragraph-title, .main__paragraph, .main__paragraph-subtitle { /*ПОФИКСИТЬ ГРИДЫ*/
+  .main__paragraph-title {
+    grid-column: 1;
+  }
+  
+  .section-why .text-group,
+  .section-how .text-group {
+    margin-bottom: 0;
     grid-column: 2;
+  }
+
+  .section-title-what {
+    width: 236px;
+  }
+
+
+  .main__galery-list {
+    display: grid;
+    gap: var(--general-padding);
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(3, auto);
+    grid-template-areas: 
+      "img-sunset img-sunset img-food"
+      "img-tape img-book img-food"
+      "img-tape img-street img-street";
+  }
+
+  .main__galery-list-item {
+    overflow: hidden;
+  }
+
+  .main_img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .img-sunset {
+    grid-area: img-sunset;
+  }
+
+  .img-food {
+    grid-area: img-food;
+  }
+
+  .img-tape {
+    grid-area: img-tape;
+  }
+
+  .img-book {
+    grid-area: img-book;
+  }
+
+  .img-street {
+    grid-area: img-street;
+  }
+
+  .galery-title {
+    margin-bottom: 20px;
   }
 }
 
