--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,11 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --page-bg-image: url(../images/cover-image-dark.png);
+  --page-bg-color: #000028;
+  --header-button-hover-color: rgb(255, 0, 112, 0.4);
+  --accent-color: #ff0070;
+  --header-color: #ff0070;
+  --main-title-color: #ff0070;
+  --focus-color: #db00ff;
+  --header-paragraph-color: #000028;
+  --paragraph-text-color: #F1B2CE;
 }
