--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,30 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --page-bg-image: url(../images/cover-image-light.png);
+  --page-bg-color: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --focus-color: #FFC2E6;
+  --header-paragraph-color: #353430;
+  --paragraph-text-color: #353430;
+  --header-color: #353430;
+  --header-button-hover-color: rgb(50, 49, 45, 0.4);
+  --main-title-color: #353430;
 }
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --page-bg-image: url(../images/cover-image-light.png);
+    --page-bg-color: #FFC2E6;
+    --accent-color: #FF8DCB;
+    --focus-color: #FFC2E6;
+    --header-paragraph-color: #353430;
+    --paragraph-text-color: #353430;
+   --header-color: #353430;
+    --header-button-hover-color: rgb(50, 49, 45, 0.4);
+    --main-title-color: #353430;
+  }
+
+  .theme-auto .header__rec-indicator {
+    visibility: hidden;
+  }
+} 
+
