--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,11 @@
   block-size: 9px;
 }
 
+.theme-light .header__rec-indicator,
+.theme-light .header__rec-indicator::after {
+  visibility: hidden;
+}
+
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
@@ -59,7 +64,7 @@
   height: 26px;
   border: none;
   padding: 1.5px 13px 1.5px 13px;
-  color: var(--accent-color);
+  color: var(--header-color);
   font-family: var(--main-font), sans-serif;
   font-weight: var(--main-font-weight);
   font-size: var(--main-font-size);
@@ -69,7 +74,7 @@
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid rgb(255, 0, 112, 0.4);
+  border: 1px solid var(--header-button-hover-color);
 }
 
 .header__theme-menu-button:focus-visible {
@@ -79,7 +84,8 @@
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--accent-color);
+  border: 1px solid var(--header-color);
+  pointer-events: none;
 }
 
 .decorated-zone::before,
@@ -89,7 +95,7 @@
   display: block;
   width: 25px;
   height: 25px;
-  border: 1px solid var(--accent-color);
+  border: 1px solid var(--header-color);
 }
 
 .decorated-zone::before {
@@ -147,7 +153,7 @@
 
 .main__section-title {
   margin-bottom: var(--margin-section-title);
-  color: var(--accent-color);
+  color: var(--main-title-color);
   font-weight: var(--bold-font-weight);
   font-size: var(--main-font-size);
 }
@@ -193,7 +199,7 @@
 }
 
 .main__paragraph-link:focus-visible {
-  outline: 1px solid #f1b2ce;
+  outline: 1px solid var(--paragraph-text-color);
 }
 
 .main__galery-list {
@@ -230,6 +236,7 @@
     --general-padding: 20px;
     --header-footer-min-height: 1024px;
     --rec-indicator-right-position: 29px;
+    --focus-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     --margin-top-themes-list: 172px;
     --rec-indicator-position: 30px;
     --margintop-main: 60px;
@@ -321,7 +328,7 @@
   :root {
     --margin-top-themes-list: 0;
     --header-footer-min-height: 768px;
-    --focus-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem)
+    --focus-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
   .header__theme-menu-list {
