ready for first check

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -7,5 +7,5 @@
   --main-title-color: #ff0070;
   --focus-color: #db00ff;
   --header-paragraph-color: #000028;
-  --paragraph-text-color: #F1B2CE;
+  --paragraph-text-color: #f1b2ce;
 }
