--- a/styles/light.css
+++ b/styles/light.css
@@ -1,8 +1,8 @@
 :root.theme-light {
   --page-bg-image: url(../images/cover-image-light.png);
-  --page-bg-color: #FFC2E6;
-  --accent-color: #FF8DCB;
-  --focus-color: #FFC2E6;
+  --page-bg-color: #ffc2e6;
+  --accent-color: #ff8dcb;
+  --focus-color: #ffc2e6;
   --header-paragraph-color: #353430;
   --paragraph-text-color: #353430;
   --header-color: #353430;
@@ -13,12 +13,12 @@
 @media (prefers-color-scheme: light) {
   :root {
     --page-bg-image: url(../images/cover-image-light.png);
-    --page-bg-color: #FFC2E6;
-    --accent-color: #FF8DCB;
-    --focus-color: #FFC2E6;
+    --page-bg-color: #ffc2e6;
+    --accent-color: #ff8dcb;
+    --focus-color: #ffc2e6;
     --header-paragraph-color: #353430;
     --paragraph-text-color: #353430;
-   --header-color: #353430;
+    --header-color: #353430;
     --header-button-hover-color: rgb(50, 49, 45, 0.4);
     --main-title-color: #353430;
   }
@@ -26,5 +26,4 @@
   .theme-auto .header__rec-indicator {
     visibility: hidden;
   }
-} 
-
+}
